# jeu_recherche_tresor

./: CMakeLists.txt  MakeFile_jeu_recherche_tresor.mak  README.md  config.h  jeu_recherche_tresor_exe  main.c
headers/: MaE.h  map.h  player.h  trap.h  treasure.h
src/: MaE.c  map.c  player.c  trap.c  treasure.c
utils/: coordinates.c  coordinates.h  divers.c  divers.h
